fixed scrollbar issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,6 +122,8 @@ h4 { font-size: var(--fs-h4);}
     z-index: 2;
 }
 
+
+
 .hidden {
     opacity: 0;
     filter: blur(2px);
@@ -129,9 +131,7 @@ h4 { font-size: var(--fs-h4);}
     transition: all 1s;
 }
 
-.about-me {
-    transform: translateX(100%);
-}
+
 
 .container .hidden {
     transition-delay: 1000ms;
@@ -143,6 +143,8 @@ h4 { font-size: var(--fs-h4);}
     filter: blur(0);
     transform: translateX(0);
 }
+
+
 
 .show .portfolio__item {
     opacity: 1;
@@ -380,6 +382,7 @@ header {
     }
 }
 
+
 /* My Projects */
 
 .portfolio {
@@ -517,76 +520,76 @@ header {
 /* Position the image container (needed to position the left and right arrows) */
 .container {
     position: relative;
-    }
+}
     
-    /* Hide the images by default */
-    .mySlides {
-    display: none;
-    }
-    
-    /* Add a pointer when hovering over the thumbnail images */
-    .cursor {
-    cursor: pointer;
-    }
-    
-    /* Next & previous buttons */
-    .prev,
-    .next {
-    cursor: pointer;
-    position: absolute;
-    top: 45%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: var(--clr-accent);
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-    }
-    
-    /* Position the "next button" to the right */
-    .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-    }
-    
-    /* On hover, add a black background color with a little bit see-through */
-    .prev:hover,
-    .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-    }
-    
-    
-    /* Container for image text */
-    .caption-container {
-    color: var(--clr-dark);
-    text-align: center;
-    background-color: var(--clr-light);
-    margin-top: 10px;
-    padding: 2px 10px;
-    
-    }
-    
-    .funtimes-img {
-    
-        max-height: 600px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;
-        box-shadow: var(--bs);
-    }
-    
-    .vert {
-        height: 30%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 32.6%;
-    
-    }
+/* Hide the images by default */
+.mySlides {
+display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+cursor: pointer;
+position: absolute;
+top: 45%;
+width: auto;
+padding: 16px;
+margin-top: -50px;
+color: var(--clr-accent);
+font-weight: bold;
+font-size: 20px;
+border-radius: 0 3px 3px 0;
+user-select: none;
+-webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+right: 0;
+border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+/* Container for image text */
+.caption-container {
+color: var(--clr-dark);
+text-align: center;
+background-color: var(--clr-light);
+margin-top: 10px;
+padding: 2px 10px;
+
+}
+
+.funtimes-img {
+
+    max-height: 600px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    box-shadow: var(--bs);
+}
+
+.vert {
+    height: 30%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 32.6%;
+
+}
 
 
 
